--- a/formulario-tarjeta-credito-/form.html
+++ b/formulario-tarjeta-credito-/form.html
@@ -32,15 +32,15 @@
 			</div>
 			<div>
 				<label for="">Código Postal</label>
-				<input type="text" id="" maxlength="19" autocomplete="off">
+				<input type="number" id="" min="0" maxlength="19" autocomplete="off">
 			</div>
 			<div>
 				<label for="">Telf/Cel</label>
-				<input type="text" id="" maxlength="19" autocomplete="off">
+				<input type="tel" id="" min="0" maxlength="19" autocomplete="off">
 			</div>
 			<div>
 				<label for="">Dirección</label>
-				<input type="text" id="" maxlength="19" autocomplete="off">
+				<input type="text" id="" maxlength="19" autocomplete="off"> 
 			</div>
 			<div>
 				<h2 id="totalPagar">Total:</h2>
